<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presenter.library.songs.LibrarySongsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/mini_player_recycler_view_end_space">

            <LinearLayout
                android:id="@+id/appbar_layout"
                style="@style/Widget.Design.AppBarLayout"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_gravity="center"
                    android:src="@drawable/beat_icon_colors" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/app_name" />

            </LinearLayout>

            <com.google.android.ads.nativetemplates.TemplateView
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:background="?android:colorBackground"
                android:visibility="invisible"
                app:gnt_template_type="@layout/gnt_medium_template_view"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appbar_layout"
                tools:visibility="visible" />

            <View
                android:id="@+id/banner_placeholder"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="?attr/colorSurface"
                app:layout_constraintBottom_toBottomOf="@+id/banner"
                app:layout_constraintLeft_toLeftOf="@+id/banner"
                app:layout_constraintRight_toRightOf="@+id/banner"
                app:layout_constraintTop_toTopOf="@+id/banner" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/music_library_icon"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_marginLeft="16dp"
                android:paddingVertical="16dp"
                android:src="@drawable/outline_music_note_24"
                app:layout_constraintBottom_toBottomOf="@+id/music_library_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/music_library_title"
                app:tint="?attr/colorControlNormal" />

            <TextView
                android:id="@+id/music_library_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center|left"
                android:minHeight="56dp"
                android:text="@string/songs_library_title"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@+id/music_library_icon"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/banner" />

            <View
                android:id="@+id/music_library_item_background"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintBottom_toBottomOf="@+id/music_library_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/music_library_title" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/album_library_icon"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_marginLeft="16dp"
                android:paddingVertical="16dp"
                android:src="@drawable/outline_album_24"
                app:layout_constraintBottom_toBottomOf="@+id/album_library_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/album_library_title"
                app:tint="?attr/colorControlNormal" />

            <TextView
                android:id="@+id/album_library_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:gravity="center|left"
                android:minHeight="56dp"
                android:text="@string/albums_library_title"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@+id/album_library_icon"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/music_library_title" />

            <View
                android:id="@+id/album_library_item_background"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintBottom_toBottomOf="@+id/album_library_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/album_library_title" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/artist_library_icon"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_marginLeft="16dp"
                android:paddingVertical="16dp"
                android:src="@drawable/outline_person_24"
                app:layout_constraintBottom_toBottomOf="@+id/artist_library_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/artist_library_title"
                app:tint="?attr/colorControlNormal" />

            <TextView
                android:id="@+id/artist_library_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:gravity="center|left"
                android:minHeight="56dp"
                android:text="@string/artists_library_title"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@+id/artist_library_icon"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/album_library_title" />

            <View
                android:id="@+id/artist_library_item_background"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintBottom_toBottomOf="@+id/artist_library_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/artist_library_title" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/settings_library_icon"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_marginLeft="16dp"
                android:paddingVertical="16dp"
                android:src="@drawable/outline_settings_suggest_24"
                app:layout_constraintBottom_toBottomOf="@+id/settings_library_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/settings_library_title"
                app:tint="?attr/colorControlNormal" />

            <TextView
                android:id="@+id/settings_library_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:gravity="center|left"
                android:minHeight="56dp"
                android:text="@string/settings_title"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@+id/settings_library_icon"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/artist_library_title" />

            <View
                android:id="@+id/settings_library_item_background"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintBottom_toBottomOf="@+id/settings_library_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/settings_library_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/mini_player_recycler_view_end_space"
        android:background="@drawable/bottom_to_top_gradient_with_background_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/mini_player_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:visibility="visible">

        <dev.ayer.dmusic.presenter.customviews.MiniPlayerView
            android:id="@+id/mini_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            android:clickable="true"
            android:elevation="8dp"
            app:accentColor="?attr/colorControlActivated"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:spaceCenter="8dp" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>